--- a/Project/Login.html
+++ b/Project/Login.html
@@ -5,18 +5,73 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Login page</title>
 <link rel="stylesheet" href="styles.css">
-
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #759ab4;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    }
+    .login-container {
+        background-color: #ffffff;
+        border-radius: 10px;
+        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+        padding: 40px;
+        text-align: center;
+    }
+    .logo {
+        width: 200px;
+        margin-bottom: 20px;
+    }
+    .login-form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .login-form label {
+        margin-bottom: 5px;
+        font-weight: bold;
+        color: #333333;
+    }
+    .login-form input {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 20px;
+        border: 1px solid #cccccc;
+        border-radius: 5px;
+        box-sizing: border-box;
+        font-size: 16px;
+    }
+    .login-form button {
+        background-color: #007bff;
+        color: #ffffff;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+    .login-form button:hover {
+        background-color: #0056b3;
+    }
+</style>
 </head>
 <body>
     
     <div class="login-container">
         <img src="images\Blue.png" alt="Logo" class="logo">
         <form class="login-form" action="" method="post">
-            <label for=""><strong>Username</strong></label>
-            <input type="text" name="username" placeholder="Username" required>
-            <label for=""><strong>Password</strong></label>
-            <input type="password" name="password" placeholder="Password" required>
-            <button type="submit"><strong>Log in</strong></button>
+            <label for="username"><strong>Username</strong></label>
+            <input type="text" id="username" name="username" placeholder="Enter your username" required>
+            <label for="password"><strong>Password</strong></label>
+            <input type="password" id="password" name="password" placeholder="Enter your password" required>
+            <button type="submit"><strong>Log in</strong>
+                <img src="images/Login.png" alt="Login Icon" style="width: 20px; vertical-align: middle; margin-left: 5px;">
+            </button>
         </form>
     </div>
 </body>
